script3/perf-base/networkpolicy/networkpolicy-pod.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: NetworkPolicy
  metadata:
    labels:
      app: deploy-server-1
    name: networkpolicy-2
    namespace: default
  spec:
    ingress:
    - from:
      - podSelector:
          matchLabels:
            app: deploy-server-1
      ports:
      - protocol: TCP
    podSelector:
      matchLabels:
        app: deploy-server-1
    policyTypes:
    - Ingress
kind: List
