script3/perf-base/networkpolicy/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: deploy-server-1
  name: np-NUMS
  namespace: default
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          project: kubemark
    ports:
    - protocol: TCP
  podSelector:
    matchLabels:
      app: deploy-server-1
  policyTypes:
  - Ingress
